--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -6,13 +6,14 @@
   opacity: 0.8;
   
   h1 {
+    margin-top: 50px;
     font-size: 60px;
-    margin-bottom: 300px;
+    margin-bottom: 150px;
   }
 
   h3 {
     font-size: 35px;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
   } 
 }
 
@@ -58,6 +59,7 @@
     font-size: 30px;
     line-height: 30px;
     text-transform: uppercase;
+    margin-bottom: 50px;
 
     &:hover {
       opacity: 0.5;
