--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -6,14 +6,14 @@
   opacity: 0.8;
   
   h1 {
-    margin-top: 50px;
+    margin-top: 2em;
     font-size: 60px;
-    margin-bottom: 150px;
+    margin-bottom: 2em;
   }
 
   h3 {
     font-size: 35px;
-    margin-bottom: 30px;
+    margin-bottom: 2em;
   } 
 }
 
@@ -59,7 +59,7 @@
     font-size: 30px;
     line-height: 30px;
     text-transform: uppercase;
-    margin-bottom: 50px;
+    margin-bottom: 2em;
 
     &:hover {
       opacity: 0.5;
